# MELAGE

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README (copy).md  README.html  README.md  instruction.text  melage.py  melage.spec  pyproject.toml
.github/workflows/: build-installers.yml
docs/: USAGE_GUIDE.md  requirements.txt
docs/source/: README.md  about.md  conf.py  index.rst  melage.config.rst  melage.dialogs.helpers.rst  melage.dialogs.rst  melage.plugins.rst  melage.plugins.warpseg.rst  melage.rendering.items.rst  melage.rendering.rst  melage.rst  melage.utils.rst  melage.widgets.rst  modules.rst
example/: melage_api_example.ipynb
example/.ipynb_checkpoints/: melage_api_example-checkpoint.ipynb
example/output/: brain.stl
graphics/opengl/: GLGraphicsItem.py  GLViewWidget.py  __init__.py  functions.py  shaders.py
melage/: __init__.py  main.py  mainwindow_widget.py  melage.py
melage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
melage/api/: __init__.py  _io.py  _preprocess.py  _progress.py  _render3d.py  _segment.py  _visualize.py  _volume.py
melage/config/: __init__.py
melage/core/: headless.py  io.py  report.py  videoarray.py  videoarray_bu.py
melage/dialogs/: AboutDialog.py  ActivationDialog.py  HistogramDialog.py  ImInfoDialog.py  MaskOperationsDialog.py  MaskingDialog.py  RegistrationDialog.py  ThresholdingDialog.py  TransformationDialog.py  __init__.py  dynamic_gui.py
melage/plugins/: ui_helpers.py
melage/rendering/: DisplayIm.py  DisplayIm_bu.py  GLGraphicsItem.py  GLViewWidget.py  Transform3D.py  __init__.py  glScientific.py  glScientific_bu.py  shaders.py
melage/utils/: headless_utils.py  optional_imports.py  utils.py
melage/widgets/: DockWidgets.py  DockWidgets_bu.py  EnhanceImageWidget.py  SettingsWidget.py  SideBar.py  __init__.py  openglWidgets.py  openglWidgets_bu.py  plugin_manager.py  toggle.py  ui_builder.py  ui_schema.py
packaging/hooks/: rthook_pyqt5.py
packaging/macos/: make_icns.py
packaging/windows/: installer.iss
resource/: 3d.psd  s.psd
resource/color/: Simple.txt  Tissue12.txt  pediatric1.txt  pediatric1_old.txt  pediatric2.txt  pediatric3.txt  pediatrics (copy).csv  tissue_seg.txt
utils/: DispalyIm.py  GMM.py  Shaders.py  Shaders_120.py  Shaders_330.py  brain_extraction_helper.py  custom_QScrollBar.py  dictionary  glScientific.py  readData.py  source_folder.py  utils.py
utils/__pycache__/: brain_extraction.BrainExtractor.compute_face_normals-116.py310.1.nbc  brain_extraction.BrainExtractor.compute_face_normals-116.py310.nbi  brain_extraction.BrainExtractor.compute_face_normals-121.py310.1.nbc  brain_extraction.BrainExtractor.compute_face_normals-121.py310.nbi  brain_extraction.BrainExtractor.compute_face_normals-316.py310.1.nbc  brain_extraction.BrainExtractor.compute_face_normals-316.py310.nbi  brain_extraction.BrainExtractor.compute_face_normals-317.py310.1.nbc  brain_extraction.BrainExtractor.compute_face_normals-317.py310.nbi  (+72 more)
widgets/: ApplyMask.py  ChangeSystem.py  HistImage.py  ImageThresholding.py  MaskOperations.py  N4Dialog.py  Synthstrip.py  be_dl.py  brain_extraction.py  brain_extraction_dl.py  dockWidgets.py  fileDialog_widget.py  iminfo.py  mainwindow_widget.py  melageAbout.py  openglWidgets.py  repeat_widget.py  screenshot_widget.py  settings_widget.py  tranformationWidget.py
(+246 files in other folders)
